tests/baselines/reference/-57087-36.errors.txt
-57087-36.ts(11,6): error TS1360: Type '{ ({ x, y }: { x: 1; y: 1; }): "111"; ({ x, y }: { x: 2; y: 1; }): "221"; ({ x, y }: { x: 2; y: 2; }): "222"; }' does not satisfy the expected type 'Garg36A & Garg36B'.


==== -57087-36.ts (1 errors) ====
    interface Garg36A {
        ({x,y}:{x:1, y:1}): "111"
    };
    interface Garg36B {
        ({x,y}:{x?:2, y?:1}): "221"
        ({x,y}:{x:2, y?:2}): "222";
    };
    
    
    declare const f36d: { ({x,y}:{x:1, y:1}): "111"; ({x,y}:{x:2, y:1}): "221"; ({x,y}:{x:2, y:2}): "222"; }
    f36d satisfies Garg36A & Garg36B; // should not satisfy
         ~~~~~~~~~
!!! error TS1360: Type '{ ({ x, y }: { x: 1; y: 1; }): "111"; ({ x, y }: { x: 2; y: 1; }): "221"; ({ x, y }: { x: 2; y: 2; }): "222"; }' does not satisfy the expected type 'Garg36A & Garg36B'.
    